Added proper packaging name for structuring